--- a/task2/index.html
+++ b/task2/index.html
@@ -1,36 +1,23 @@
 <!-- Stwórz stronę w hmtl
-    Wymagania
+    Zademonstruj:
 
-    Struktura strony:
-        Należy dodać do strony nagłówek, artykuł i stopkę (elementy <header>, <article> i <footer>).
-        Użyć tagów <h1> i <h2> do wyróżnienia nagłówków.
-    Tabela:
-        Stworzyć tabelkę z danymi (mogą być wymyślone).
-        Tabela powinna zawierać nagłówek, wiersze i kolumny z danymi.
-        Należy nadać tabeli tytuł.
-    Lista:
-        Stworzyć listę numerowaną cyframi rzymskimi.
-    Wyróżnienia:
-        Użyć tagów do wyróżnienia tekstu (np. <strong>, <em>).
-    Obrazek:
-        Dodać do strony obrazek (element <img>).
-    Formularz:
-        Stworzyć formularz (element <form>) zawierający między innnymi:
-            Pole tekstowe (element <input>).
-            Pole wyboru (element <select>) z optgroup.
-            Przycisk (element <button>).
-    Rozwijany opis:
-        Użyć tagów <details> i <summary> do stworzenia rozwijanego opisu.
-    Pasek postępu:
-        Użyć elementu <progress> do stworzenia paska postępu (np. dla postępu zrobienia zadania).
-    Mapa:
-        Stworzyć sensowną mapę za pomocą elementów <map> i <area>. Mapa powinna zawierać co najmniej 3 obszary. 
-    
-    Możesz rozszerzyć zadanie o dodatkowe elementy, np.:
-
-    Dodanie linków do innych stron.
-    Umieszczenie filmu na stronie.
-    Użycie stylów inline do formatowania tekstu.
+Ukrywanie jednego z elementów strony w sytuacji, gdy szerokość okna przeglądarki jest mniejsza niż 800px.
+Zmianę koloru tła elementu strony w momencie, gdy kursor znajduje się nad tym elementem.
+Zmianę koloru tła elementu strony w momencie, gdy kursor znajduje się nad tym elementem, ale tylko wtedy, gdy szerokość okna przeglądarki jest większa niż 800px.
+Zmianę kolejności elementów strony w momencie, gdy szerokość okna przeglądarki jest mniejsza niż 800px (elementy mają być ułożone jeden pod drugim).
+Wykorzystanie atrybutu justify-content do wyśrodkowania elementów w kontenerze:
+po lewej stronie,
+po prawej stronie,
+na środku,
+równomiernie rozłożone.
+Przygotuj SCSS, który będzie zawierał:
+zmienną z kolorami tła,
+zmienną z kolorami tekstu,
+zmienną z kolorami linków.
+Wykorzystanie zmiennych w pliku SCSS.
+Wykorzystanie mixinów w pliku SCSS.
+Wykorzystanie zagnieżdżania w pliku SCSS.
+Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, etc.).
 -->
 
 <!DOCTYPE html>
@@ -573,5 +560,10 @@
         allowfullscreen
       ></iframe>
     </article>
+    <footer>
+      <div align="center">
+        <p>Pozdrawiamy fanów Formuły 1!</p>
+      </div>
+    </footer>
   </body>
 </html>
