Added some scss, flexbox. TODO: make the frames swap order.

--- a/task2/index.html
+++ b/task2/index.html
@@ -438,7 +438,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
         });
       </script>
 
-      <section class="center-text">
+      <section class="center-text map-section">
         <h3>Mapa z zaznaczonymi torami wyścigowymi Formuły 1</h3>
         <img src="img/europe.jpg" usemap="#F1-in-Europe" alt="Mapa Europy" />
         <map name="F1-in-Europe">
@@ -509,18 +509,46 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
         </map>
       </section>
 
-      <section class="center-text">
+      <section class="center-text video-section">
         <h3>Najlepsze momenty rajdowe</h3>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/HwyRS_6Uqn0?si=LIP7hT1_Q7TKwpzU"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <div class="video-gallery">
+          <div class="video-box">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/HwyRS_6Uqn0?si=LIP7hT1_Q7TKwpzU"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-box">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/mkhK6FOcHPY?si=PqA8XUORtJxKTq9d"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-box">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/V4Asnh_2OF4?si=-xofYiK488FIu4L6"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
       </section>
     </article>
 
