Improved styling of index file, added subpages.

--- a/task4/hall_of_fame.html
+++ b/task4/hall_of_fame.html
@@ -1,28 +1,8 @@
-<!-- Zademonstruj:
-
-Ukrywanie jednego z elementów strony w sytuacji, gdy szerokość okna przeglądarki jest mniejsza niż 800px.
-Zmianę koloru tła elementu strony w momencie, gdy kursor znajduje się nad tym elementem.
-Zmianę koloru tła elementu strony w momencie, gdy kursor znajduje się nad tym elementem, ale tylko wtedy, gdy szerokość okna przeglądarki jest większa niż 800px.
-Zmianę kolejności elementów strony w momencie, gdy szerokość okna przeglądarki jest mniejsza niż 800px (elementy mają być ułożone jeden pod drugim).
-Wykorzystanie atrybutu justify-content do wyśrodkowania elementów w kontenerze:
-po lewej stronie,
-po prawej stronie,
-na środku,
-równomiernie rozłożone.
-Przygotuj SCSS, który będzie zawierał:
-zmienną z kolorami tła,
-zmienną z kolorami tekstu,
-zmienną z kolorami linków.
-Wykorzystanie zmiennych w pliku SCSS.
-Wykorzystanie mixinów w pliku SCSS.
-Wykorzystanie zagnieżdżania w pliku SCSS.
-Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, etc.). -->
-
 <!DOCTYPE html>
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>Formuła 1</title>
+    <title>Formuła 1 i nie tylko...</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link to external stylesheet -->
@@ -30,12 +10,12 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
   </head>
   <body>
     <header class="f1-header">
-      <h1 id="title" class="center-text">Formuła 1</h1>
+      <h1 id="title" class="center-text">Formuła 1 i nie tylko...</h1>
       <nav class="nav-container">
         <ul class="menu">
           <li><a href="index.html">Historia Formuły 1</a></li>
           <li><a href="hall_of_fame.html">Galeria sław</a></li>
-          <li><a href="curious.html">Ciekawostki</a></li>
+          <li><a href="rally.html">Sekcja rajdowa</a></li>
         </ul>
         <!-- Justification control buttons -->
         <div class="justify-controls">
@@ -45,91 +25,24 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           <button type="button" onclick="justifyMenu('space-between')">Evenly</button>
         </div>
       </nav>
-    </header>
-    <script>
-      // Select the navigation ul (menu)
-      const menu = document.querySelector(".menu");
+      <script>
+        // Select the navigation ul (menu)
+        const menu = document.querySelector(".menu");
 
-      // Function to justify menu
-      function justifyMenu(justification) {
-        menu.style.opacity = "0";
-        setTimeout(() => {
-          menu.style.justifyContent = justification;
-          menu.style.opacity = "1";
-        }, 700);
-      }
-    </script>
+        // Function to justify menu
+        function justifyMenu(justification) {
+          menu.style.opacity = "0";
+          setTimeout(() => {
+            menu.style.justifyContent = justification;
+            menu.style.opacity = "1";
+          }, 700);
+        }
+      </script>
+    </header>
     <article class="main-content">
       <section class="center-text">
-        <h2>Historia Formuły 1</h2>
-
-        <!-- Tabela zawierająca 10 ostatnich zwycięzców mistrzostw świata F1-->
-        <table class="winners-table">
-          <caption>
-            <em>Ostatni zwycięzcy Mistrzostw Świata Formuły 1</em>
-          </caption>
-          <thead>
-            <tr>
-              <th scope="col">Sezon</th>
-              <th scope="col">Kierowca</th>
-              <th scope="col">Zespół</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>2024</td>
-              <td><strong>Max Verstappen</strong></td>
-              <td>Red Bull Racing</td>
-            </tr>
-            <tr>
-              <td>2023</td>
-              <td><strong>Max Verstappen</strong></td>
-              <td>Red Bull Racing</td>
-            </tr>
-            <tr>
-              <td>2022</td>
-              <td><strong>Max Verstappen</strong></td>
-              <td>Red Bull Racing</td>
-            </tr>
-            <tr>
-              <td>2021</td>
-              <td><strong>Max Verstappen</strong></td>
-              <td>Red Bull Racing</td>
-            </tr>
-            <tr>
-              <td>2020</td>
-              <td><strong>Lewis Hamilton</strong></td>
-              <td>Mercedes</td>
-            </tr>
-            <tr>
-              <td>2019</td>
-              <td><strong>Lewis Hamilton</strong></td>
-              <td>Mercedes</td>
-            </tr>
-            <tr>
-              <td>2018</td>
-              <td><strong>Lewis Hamilton</strong></td>
-              <td>Mercedes</td>
-            </tr>
-            <tr>
-              <td>2017</td>
-              <td><strong>Lewis Hamilton</strong></td>
-              <td>Mercedes</td>
-            </tr>
-            <tr>
-              <td>2016</td>
-              <td><strong>Nico Rosberg</strong></td>
-              <td>Mercedes</td>
-            </tr>
-            <tr>
-              <td>2015</td>
-              <td><strong>Lewis Hamilton</strong></td>
-              <td>Mercedes</td>
-            </tr>
-          </tbody>
-        </table>
+        <h2>Galeria sław Formuły 1</h2>
       </section>
-
       <section>
         <h3>Ranking najlepszych kierowców XXI wieku</h3>
         <ol type="I" class="ranking-list">
@@ -369,157 +282,24 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
 
         <div id="responseMessage">🏁 Formularz został poprawnie wysłany! 🏁</div>
         <audio id="speedSound" src="audio/speed.mp3"></audio>
-      </section>
+        <script>
+          // Formularz
+          document.getElementById("myForm").addEventListener("submit", function (event) {
+            event.preventDefault();
+            var responseMessage = document.getElementById("responseMessage");
+            responseMessage.style.display = "block";
 
-      <section class="progress-section center-text">
-        <h3>Postęp Maxa Verstappena w zdobyciu największej liczby tytułów mistrza świata F1</h3>
-        <div class="progress-bar-background">
-          <div id="progress-bar">
-            <div class="car-container">
-              <img src="img/car.gif" alt="Animated Car" />
-            </div>
-          </div>
-        </div>
-        <p>Max Verstappen zdobył <span id="titles-count">4</span> z 7 tytułów mistrza świata</p>
-      </section>
+            var speedSound = document.getElementById("speedSound");
+            speedSound.volume = 0.2;
+            speedSound.play();
 
-      <script>
-        // Formularz
-        document.getElementById("myForm").addEventListener("submit", function (event) {
-          event.preventDefault();
-          var responseMessage = document.getElementById("responseMessage");
-          responseMessage.style.display = "block";
-
-          var speedSound = document.getElementById("speedSound");
-          speedSound.volume = 0.2;
-          speedSound.play();
-
-          setTimeout(function () {
-            responseMessage.style.display = "none";
-          }, 5000);
-        });
-
-        // Pasek postępu
-        document.addEventListener("DOMContentLoaded", function () {
-          var titlesCount = 4;
-          var maxTitles = 7;
-          var progressBar = document.getElementById("progress-bar");
-          var progressPercentage = (titlesCount / maxTitles) * 100;
-          progressBar.style.width = progressPercentage + "%";
-        });
-      </script>
-
-      <section class="center-text map-section">
-        <h3>Mapa z zaznaczonymi torami wyścigowymi Formuły 1</h3>
-        <img src="img/europe.jpg" usemap="#F1-in-Europe" alt="Mapa Europy" />
-        <map name="F1-in-Europe">
-          <area
-            target="_blank"
-            alt="Hiszpania"
-            title="Hiszpania"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Hiszpanii_Formu%C5%82y_1"
-            coords="32,350,56,358,83,365,99,370,109,375,124,379,136,385,129,393,118,401,107,410,100,419,103,428,93,437,78,445,56,447,39,450,31,439,24,431,43,378,26,370"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Francja"
-            title="Francja"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Francji_Formu%C5%82y_1"
-            coords="100,367,135,383,143,370,159,373,180,366,175,358,176,347,170,338,173,327,181,315,186,303,157,287,148,278,138,273,125,285,115,292,100,295,78,297,96,313,104,329,103,340,102,349"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Włochy"
-            title="Włochy"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_W%C5%82och_Formu%C5%82y_1"
-            coords="184,367,178,345,192,341,210,337,227,334,235,337,227,349,229,366,237,377,250,393,261,399,272,404,287,411,272,414,270,422,274,430,267,441,259,458,233,453,247,444,263,423,240,411,225,394,207,373,196,365"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Wielka Brytania"
-            title="Wielka Brytania"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Wielkiej_Brytanii_Formu%C5%82y_1"
-            coords="81,271,109,269,136,269,134,260,138,247,129,239,122,222,114,203,106,196,123,187,113,179,114,168,104,167,91,180,90,193,96,204,98,214,104,214,105,223,107,234,96,233,96,243,84,247,98,257"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Niemcy"
-            title="Niemcy"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Niemiec_Formu%C5%82y_1"
-            coords="183,319,206,322,229,320,238,304,221,285,242,275,238,247,230,236,211,236,202,224,196,232,186,240,179,248,176,263,172,276,174,287"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Austria"
-            title="Austria"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Austrii_Formu%C5%82y_1"
-            coords="202,325,224,328,240,332,258,324,264,312,262,303,246,302,233,312,223,317,214,321"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Rosja"
-            title="Rosja"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Rosji_Formu%C5%82y_1"
-            coords="356,25,294,17,300,47,316,78,329,99,323,131,337,135,322,149,293,158,300,173,324,176,337,190,349,193,360,202,374,211,372,225,389,229,405,235,423,239,446,243,454,256,454,268,454,281,448,298,453,306,467,309,467,1,387,1,362,4"
-            shape="poly"
-          />
-          <area
-            target="_blank"
-            alt="Holandia"
-            title="Holandia"
-            href="https://pl.wikipedia.org/wiki/Grand_Prix_Holandii_Formu%C5%82y_1"
-            coords="178,242,168,244,161,255,161,262,169,267,177,259"
-            shape="poly"
-          />
-        </map>
-      </section>
-
-      <section class="center-text video-section">
-        <h3>Najlepsze momenty rajdowe</h3>
-        <div class="video-gallery">
-          <div class="video-box">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/HwyRS_6Uqn0?si=LIP7hT1_Q7TKwpzU"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="video-box">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/mkhK6FOcHPY?si=PqA8XUORtJxKTq9d"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
-          <div class="video-box">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/V4Asnh_2OF4?si=-xofYiK488FIu4L6"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </div>
+            setTimeout(function () {
+              responseMessage.style.display = "none";
+            }, 5000);
+          });
+        </script>
       </section>
     </article>
-
     <footer class="center-text">
       <p>Pozdrawiamy fanów Formuły 1!</p>
     </footer>
