--- a/task4/index.html
+++ b/task4/index.html
@@ -63,13 +63,13 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
       <section class="center-text">
         <h2>Historia Formuły 1</h2>
       </section>
-      <section class="light-shadow short-history">
+      <section class="light-shadow base-section">
         <p>
           Formuła 1 (F1) to najwyższa klasa wyścigów samochodowych, której historia jest pełna
           pasji, innowacji technologicznych i niezatartego śladu w kulturze motoryzacyjnej.
         </p>
 
-        <h2>Początki Formuły 1</h2>
+        <h3>Początki Formuły 1</h3>
         <p>
           Korzenie F1 sięgają lat 20. i 30. XX wieku, kiedy to w Europie organizowano pierwsze
           wyścigi Grand Prix. Oficjalnie Formuła 1 jako seria wyścigów o Mistrzostwo Świata została
@@ -78,7 +78,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           Giuseppe Farina, prowadząc samochód Alfa Romeo, zdobył pierwsze pole startowe.
         </p>
 
-        <h2>Wczesne lata i dominacja Alfa Romeo</h2>
+        <h3>Wczesne lata i dominacja Alfa Romeo</h3>
         <p>
           W początkowych latach F1 dominowały zespoły takie jak Alfa Romeo, Ferrari i Maserati.
           Giuseppe Farina, pierwszy mistrz świata, jeździł dla Alfa Romeo. Kolejną legendą był Juan
@@ -86,7 +86,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           1957, reprezentując różne zespoły, w tym Alfa Romeo, Maserati, Mercedes-Benz i Ferrari.
         </p>
 
-        <h2>Złota era Formuły 1</h2>
+        <h3>Złota era Formuły 1</h3>
         <p>
           Lata 60. i 70. XX wieku to okres znany jako "złota era" F1. Brytyjskie zespoły, takie jak
           Lotus, McLaren i Williams, zaczęły dominować na torach. Lotus, pod przewodnictwem Colina
@@ -98,7 +98,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           jak obowiązkowe pasy bezpieczeństwa, lepsze kaski i wzmocnione konstrukcje samochodów.
         </p>
 
-        <h2>Era turbo i dominacja McLarena</h2>
+        <h3>Era turbo i dominacja McLarena</h3>
         <p>
           Lata 80. XX wieku przyniosły rewolucję technologiczną w postaci silników turbo, które
           znacznie zwiększyły moc pojazdów. Renault jako pierwszy zespół wprowadził silniki turbo w
@@ -109,7 +109,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           sportu.
         </p>
 
-        <h2>Era hybrydowa i dominacja Mercedesa</h2>
+        <h3>Era hybrydowa i dominacja Mercedesa</h3>
         <p>
           W 2014 roku Formuła 1 wkroczyła w nową erę technologiczną z wprowadzeniem silników
           hybrydowych. Zespoły zaczęły korzystać z zaawansowanych jednostek napędowych, łączących
@@ -120,7 +120,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           rekordy liczby zwycięstw i pole positions.
         </p>
 
-        <h2>Nowe przepisy i przyszłość Formuły 1</h2>
+        <h3>Nowe przepisy i przyszłość Formuły 1</h3>
         <p>
           W ostatnich latach FIA wprowadziła nowe przepisy mające na celu zwiększenie
           konkurencyjności i bezpieczeństwa w Formule 1. W 2022 roku wprowadzono nowe regulacje
@@ -134,8 +134,8 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
       <section class="center-text">
         <h2>Współczesne ściganie</h2>
       </section>
-      <section class="light-shadow short-history">
-        <h2>Ostatnie sezony Formuły 1</h2>
+      <section class="light-shadow base-section">
+        <h3>Ostatnie sezony Formuły 1</h3>
         <p>
           W latach 2010–2025 Formuła 1 była świadkiem dynamicznych zmian i emocjonujących
           rywalizacji. Sebastian Vettel zdobył cztery kolejne tytuły mistrza świata w latach
@@ -212,7 +212,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
             </tr>
           </tbody>
         </table>
-        <h2>Dominacja Maxa Verstappena</h2>
+        <h3>Dominacja Maxa Verstappena</h3>
         <p>
           Max Verstappen, holenderski kierowca wyścigowy, zdominował świat Formuły 1 w ostatnich
           latach. Swoją przygodę z F1 rozpoczął w wieku 17 lat, stając się najmłodszym kierowcą w
@@ -255,8 +255,19 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
         </section>
       </section>
 
-      <section class="center-text map-section">
-        <h3>Wyścigi F1 w Europie</h3>
+      <section class="center-text" id="over-map">
+        <h2>Grand Prix w Europie</h2>
+      </section>
+      <section class="base-section center-text light-shadow map-section">
+        <p>
+          Formuła 1 to nie tylko sport, ale również niesamowita podróż po legendarnych torach
+          wyścigowych Europy. Od malowniczej Hiszpanii po deszczową Wielką Brytanię — każdy kraj
+          oferuje unikalne wyzwania i emocje dla kierowców oraz kibiców. Oto mapa najważniejszych
+          europejskich Grand Prix:
+        </p>
+        <p>
+          Najedź kursorem na kraj, aby zobaczyć jego nazwę. Kliknij, aby dowiedzieć się więcej o Grand Prix.
+        </p>
         <img src="img/europe.jpg" usemap="#F1-in-Europe" alt="Mapa Europy" />
         <map name="F1-in-Europe">
           <area
@@ -324,14 +335,10 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
             shape="poly"
           />
         </map>
-        <p>
-          Najedź kursorem na kraj, aby zobaczyć jego nazwę. Kliknij, aby dowiedzieć się więcej o
-          Grand Prix w tym kraju.
-        </p>
       </section>
     </article>
 
-    <footer class="center-text">
+    <footer>
       <p>Pozdrawiamy fanów Formuły 1!</p>
     </footer>
   </body>
