--- a/task4/rally.html
+++ b/task4/rally.html
@@ -40,8 +40,19 @@
       </script>
     </header>
     <article class="main-content">
-      <section class="center-text video-section">
-        <h3>Najlepsze momenty rajdowe</h3>
+      <section class="center-text">
+        <h2>Sekcja rajdowa</h2>
+      </section>
+      <section class="video-section light-shadow">
+        <p>
+          Rajdy samochodowe to dynamiczna dyscyplina sportu motorowego, w której załogi składające
+          się z kierowcy i pilota rywalizują na zamkniętych odcinkach specjalnych. Trasy rajdowe
+          prowadzą przez różnorodne nawierzchnie, takie jak asfalt, szuter czy śnieg, co sprawia, że
+          każdy rajd jest unikalnym wyzwaniem. Celem jest jak najszybsze pokonanie wszystkich
+          odcinków specjalnych, a sukces zależy od precyzyjnej współpracy całej załogi oraz
+          doskonałej znajomości trasy. Zachęcam do obejrzenia poniższych filmów, które przedstawiają
+          namiastkę emocji towarzyszących rywalizacji w rajdach.
+        </p>
         <div class="video-gallery">
           <div class="video-box">
             <iframe
