Installed tailwind, made it work. But it looks horribly...

--- a/task4/index.html
+++ b/task4/index.html
@@ -17,7 +17,6 @@ Wykorzystanie zmiennych w pliku SCSS.
 Wykorzystanie mixinów w pliku SCSS.
 Wykorzystanie zagnieżdżania w pliku SCSS.
 Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, etc.). -->
-
 <!DOCTYPE html>
 <html lang="pl">
   <head>
@@ -26,7 +25,8 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link to external stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="tail.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
   <body>
     <header class="f1-header">
@@ -36,7 +36,7 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           <li><a href="index.html">Historia Formuły 1</a></li>
           <li><a href="hall_of_fame.html">Galeria sław</a></li>
           <li><a href="rally.html">Sekcja rajdowa</a></li>
-        </ul>
+        </ul> 
         <!-- Justification control buttons -->
         <div class="justify-controls">
           <button type="button" onclick="justifyMenu('flex-start')">Left</button>
@@ -266,7 +266,8 @@ Wykorzystanie funkcji w pliku SCSS (np. darken, lighten, saturate, desaturate, e
           europejskich Grand Prix:
         </p>
         <p>
-          Najedź kursorem na kraj, aby zobaczyć jego nazwę. Kliknij, aby dowiedzieć się więcej o Grand Prix.
+          Najedź kursorem na kraj, aby zobaczyć jego nazwę. Kliknij, aby dowiedzieć się więcej o
+          Grand Prix.
         </p>
         <img src="img/europe.jpg" usemap="#F1-in-Europe" alt="Mapa Europy" />
         <map name="F1-in-Europe">
