--- a/task2/hall_of_fame.html
+++ b/task2/hall_of_fame.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link to external stylesheet -->
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
-     <link rel="stylesheet" href="tail.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="f1-header">
